# opcua_examples

./: LICENSE  README.md  pyproject.toml  requirements.win.txt  setup.py
src/DAServerData/: data_server_serverdata.py
src/DAServerExcel/: ProcessMgmt - Kopie.xlsx  ProcessMgmt.xlsx  excel_client.py  excel_server.py
src/DAServerPCData/: data_client_pcdata.ipynb  data_server_pcdata.py
src/DAServerSelfSigned/: public.pem  selfsign.csr  selfsigned.crt
src/DAServerSelfSigned/client/: data_client_selfsigned.py
src/DAServerSelfSigned/server/: data_server_selfsigned.py  private.pem
src/DAServerSimple/: data_client.py  data_server.py  example-computer.ipynb  example-visualization.ipynb
src/MethodsServerSimple/: method_client.py  method_server.py
