[project]

name = "opcua-sampleproject"
version = "1.0.0"

description = "A sample opcua project"
readme = "README.md"

requires-python = ">=3"

# license = {file = "LICENSE.txt"}

# authors = [
# {name = "A", email = "author@example.com" }
# ]
# maintainers = [
#  {name = "A", email = "maintainer@example.com" }
# ]

# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  # "License :: <License>"
  "Programming Language :: Python :: 3",
]

dependencies = [
  "jupyter",
  "matplotlib",
  "opcua",
  "pyOpenSSL"
]

[project.optional-dependencies]
dev = [
  "devtools",
  "mypy",
  "Pygments"
]


[project.urls]
"Homepage" = "https://github.com/Kefaku/opcua-example>"
"Source" = "https://github.com/Kefaku/opcua-example"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
# [project.scripts]  # Optional
# sample = "sample:main"